fix call method